# FormCrafter

./: README.md
googleform/: README.md  pyproject.toml  report.md
googleform/src/googleform/: .env.example  crew.py  main.py
googleform/src/googleform/config/: agents.yaml  tasks.yaml
googleform/src/googleform/tools/: googleform_tool.py
