[project]
name = "googleform"
version = "0.1.0"
description = "googleform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
googleform = "googleform.main:run"
run_crew = "googleform.main:run"
train = "googleform.main:train"
replay = "googleform.main:replay"
test = "googleform.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
